# displayxr-demo-avatar

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  PORTING.md  README.md  settings.gradle
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
android/: OVERLAY_PLATFORM_NOTES.md  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/assets/: avatar.fbx
android/src/main/cpp/: CMakeLists.txt  hud_bar.cpp  hud_bar.h  main.cpp
android/src/main/java/com/displayxr/avatar_vk_android/: MainActivity.kt  OverlayKeepAliveService.kt
android/src/main/res/values/: ic_launcher_background.xml  themes.xml
installer/: DisplayXRAvatarInstaller.nsi  build-installer.bat
installer/macos/: Distribution.xml  build_installer.sh  create_app_bundle.sh
installer/macos/resources/: welcome.html
linux/: CMakeLists.txt  clickthrough.cpp  clickthrough.h  main.cpp  stb_image_impl.cpp  stb_truetype_impl.cpp
macos/: CMakeLists.txt  main.mm
model_common/: CMakeLists.txt  model_loader.cpp  model_loader_fbx.cpp  model_renderer.cpp  model_renderer.h
model_common/shaders/: edge_fade.frag  edge_soften.frag
openxr_includes/openxr/: XR_DXR_xlib_window_binding.h  XR_EXT_cocoa_window_binding.h  XR_EXT_display_zones.h  XR_EXT_local_3d_zone.h  XR_EXT_macos_gl_binding.h  XR_EXT_spatial_workspace.h
scripts/: build-with-deps.bat  build_linux.sh  build_macos.sh  build_windows.bat  dev_register.bat  run_avatar_linux.sh  run_macos_dev.sh
windows/: CMakeLists.txt  avatar_openxr_ext_vk.manifest  main.cpp  resource.rc  xr_session.cpp  xr_session.h
windows/displayxr/: avatar_handle_vk_win.displayxr.json
